# cmpact_ros

cmpact_bringup/: CMakeLists.txt  package.xml
cmpact_bringup/config/: microstrain_params.yml
cmpact_bringup/launch/: microstrain.launch
